# artificial-persistent-intelligence

./: .env.example  .gitignore  .npmignore  ANNOUNCE.md  CHANGELOG.md  CORD_Protocols.md  Dockerfile  INTEGRATION.md  LICENSE  README.md  SENTINEL_Constitution_V2.md  THREAT_MODEL.md  api  architecture.html  contact.html  demo.js  index.html  manifesto.html  package-lock.json  package.json  pyproject.toml  sentinel  wolf.html
.github/workflows/: npm-publish.yml  test.yml
cord/: README.md  cache.js  cache.test.js  cord-vigil.test.js  cord.js  cord.test.js  demo.js  explain.js  frameworks.test.js  index.js  intentLock.js  logger.js  logger.test.js  middleware.js  middleware.test.js  package-lock.json  package.json  policies.js  sandbox.js  sandbox.test.js
cord/frameworks/: autogen.js  crewai.js  index.js  langchain.js
cord_engine/: __init__.py  __main__.py  audit_log.py  bridge.py  cli.py  constitution.py  demo.py  engine.py  intent_lock.py  interceptor.py  models.py  normalizer.py  policies.py  protocols.py  scoring.py
cord_engine/frameworks/: __init__.py  crewai.py  langchain.py  llamaindex.py
dashboard/: index.html  server.js
legion/: index.js  orchestrator.js  session.js
legion/models/: claude.js  executor.js
openclaw-dashboard/: index.html  package.json  server.js
openclaw-skill/: SKILL.md
openclaw-skill/references/: cord-api.md
openclaw-skill/scripts/: cord_status.py
tests/: conftest.py  plan-validation.test.js  redteam-results.json  redteam.test.js  stress_test_real_attacks.py  test_cord.py  test_interceptor.py  test_layers.py  test_normalizer.py  test_policies.py
vigil/: README.md  alerter.js  canary.js  circuit.js  config.js  logrotate.js  memory.js  normalizer.js  patterns.js  proactive.js  proactive.test.js  ratelimit.js  scanner.js  semantic.js  vigil-alerts.jsonl  vigil.hardening.test.js  vigil.js  vigil.proactive.test.js  vigil.test.js
